checkpoint on progress, naming indirection, primary key models, where predicates